chore: fix tests for ZDJ and ZTJ components