@@ -15,8 +15,8 @@ import static org.mockito.Mockito.*;
 
 import app.bpartners.geojobs.conf.FacadeIT;
 import app.bpartners.geojobs.endpoint.event.EventProducer;
+import app.bpartners.geojobs.endpoint.event.model.AutoTaskStatisticRecomputingSubmitted;
 import app.bpartners.geojobs.endpoint.event.model.parcel.ParcelDetectionTaskCreated;
-import app.bpartners.geojobs.endpoint.event.model.status.ZDJParcelsStatusRecomputingSubmitted;
 import app.bpartners.geojobs.endpoint.event.model.status.ZDJStatusRecomputingSubmitted;
 import app.bpartners.geojobs.endpoint.rest.controller.mapper.ZoneDetectionJobMapper;
 import app.bpartners.geojobs.endpoint.rest.model.*;
@@ -279,26 +279,21 @@ public class ZoneDetectionJobControllerIT extends FacadeIT {
 
     assertEquals(expected, actual);
     var eventsCaptor = ArgumentCaptor.forClass(List.class);
-    var parcelStatusEventNb = 1;
     var zdjStatusEventNb = 1;
     var taskStatusComputingEvent = 1;
     verify(
             eventProducer,
-            times(
-                configuredTasks.size()
-                    + parcelStatusEventNb
-                    + zdjStatusEventNb
-                    + taskStatusComputingEvent))
+            times(configuredTasks.size() + zdjStatusEventNb + taskStatusComputingEvent))
         .accept(eventsCaptor.capture());
     var events = eventsCaptor.getAllValues();
-    var capturedEvent1 = events.get(0).get(0);
-    var capturedEvent2 = events.get(1).get(0);
-    var capturedEvent3 = events.get(2).get(0);
-    var capturedEvent4 = events.get(3).get(0);
+    var capturedEvent1 = events.get(0).getFirst();
+    var capturedEvent2 = events.get(1).getFirst();
+    var capturedEvent3 = events.get(2).getFirst();
+    var capturedEvent4 = events.get(3).getFirst();
     assertEquals(new ParcelDetectionTaskCreated(configuredTasks.get(0)), capturedEvent1);
     assertEquals(new ParcelDetectionTaskCreated(configuredTasks.get(1)), capturedEvent2);
-    assertEquals(new ZDJParcelsStatusRecomputingSubmitted(job1.getId()), capturedEvent3);
-    assertEquals(new ZDJStatusRecomputingSubmitted(job1.getId()), capturedEvent4);
+    assertEquals(new ZDJStatusRecomputingSubmitted(job1.getId()), capturedEvent3);
+    assertEquals(new AutoTaskStatisticRecomputingSubmitted(job1.getId()), capturedEvent4);
   }
 
   @Test
